tests/error/inout_errors/shadow.err
Error: Borrow shadowed (at $FILE:7:4)
  | 
5 | @guppy
6 | def test(q: qubit) -> None:
7 |     q = qubit()
  |     ^ Assignment shadows borrowed argument `q`

Help: Consider assigning to a different name

Guppy compilation failed due to 1 previous error
